# n_m3u8dl-re-gui

./: .gitignore  LICENSE  README.md  electron-webpack.json  index.html  main.js  package-lock.json  package.json  preload.js  tsconfig.json  vite.config.ts  webpack.config.js
public/: index.html
src/: App.css  App.tsx  index.css  index.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx  SideMenu.tsx  TopBar.tsx
src/i18n/: i18n.ts
src/i18n/locales/: en.json  zh.json
src/styles/: HistoryPage.css  HomePage.css  SettingsPage.css  SideMenu.css  TopBar.css  theme.css
src/types/: tauri.d.ts
